# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "sandboxed_api",
    version = "20260421.0",
    bazel_compatibility = [">=8.5.0"],
)

# Load additional repo rules.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Bazel Central Registry (BCR) Modules:
bazel_dep(name = "abseil-cpp", version = "20260526.0")
bazel_dep(name = "abseil-py", version = "2.4.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "google_benchmark", version = "1.9.5")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")
bazel_dep(name = "libcap", version = "2.27.bcr.1")
bazel_dep(name = "libffi", version = "3.4.7.bcr.4")
bazel_dep(name = "libunwind", version = "1.8.3")
bazel_dep(name = "protobuf", version = "34.1", repo_name = "com_google_protobuf")
bazel_dep(name = "re2", version = "2025-11-05.bcr.1")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_python", version = "2.0.0-rc2")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "zlib", version = "1.3.2")  # Only needed for examples

# Non-Modularized Dependencies:

# llvm-project
llvm = use_extension("//sandboxed_api/bazel:llvm_config.bzl", "llvm")
llvm.disable_llvm_zlib()
llvm.disable_llvm_terminfo()
use_repo(llvm, "llvm-project")
